--- a/ocean_of_profit_nov.html
+++ b/ocean_of_profit_nov.html
@@ -330,7 +330,7 @@
         }
       }
 
-      batchCounter++;
+      // batchCounter++;
 
       if (batchCounter >= BATCH_SIZE) {
         batchCounter = 0;
