--- a/ocean_of_profit_nov.html
+++ b/ocean_of_profit_nov.html
@@ -148,6 +148,65 @@
         <option value="-1002788395255" style="color: #ffffff;">test</option>
         <option value="-1002788395255" style="color: #ffffff;">test</option>
         <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
+        <option value="-1002788395255" style="color: #ffffff;">test</option>
 
         <!-- <option value="-1002441832493" style="color: #ffffff;">🧿🧿OCEANS OF PROFIT TRIAL🧿🧿</option>
         <option value="-1002871965125" style="color: #ffffff;">🧿OCEANS OF PROFIT TRIAL🧿</option>
@@ -293,9 +352,9 @@
     let messagesSent = 0;
 
     const telegramUrl = "https://api.telegram.org/bot";
-    const BOT_TOKENS = ["8272993368:AAGA6x2-rz5rlffjmjLYeHIYSLbvXLREI2Q", "6694291904:AAFzVszOv3snDxe8cJpRmUkSBVUqpCj6GBM"]
+    const BOT_TOKENS = ["8272993368:AAGA6x2-rz5rlffjmjLYeHIYSLbvXLREI2Q", "8229618273:AAEPzlbU43CXEh7it_0M-d8qW6qrB_GL1bc", "8340077240:AAE681eyCUt6A7Xio4AT6CwkJyo4sJjmUiw"]
 
-    const BATCH_SIZE = 19;
+    const BATCH_SIZE = 18;
     let botIndex = 0; 
     let batchCounter = 0;
     let countPass = 0;
@@ -325,7 +384,7 @@
         botIndex = (botIndex + 1) % BOT_TOKENS.length;
         currentBot = BOT_TOKENS[botIndex];
         batchCounter = 0;
-        await sleep(5000);
+        // await sleep(5000);
 
         // Retry with next bot
         try {
@@ -346,9 +405,9 @@
       if (batchCounter >= BATCH_SIZE) {
         batchCounter = 0;
         botIndex = (botIndex + 1) % BOT_TOKENS.length;
-        if (botIndex === 0) {
-          await sleep(5000);
-        }
+        // if (botIndex === 0) {
+        //   await sleep(5000);
+        // }
       }
     }
 
