--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         <option value="-1003391296771" style="color: #ffffff;">37. GT-OP New OCEANS OF PROFIT🧿TRIAL</option>
         <option value="-1003200569047" style="color: #ffffff;">38. GT-OP New 🧿🧿🧿OCEANS OF PROFIT🧿TRIAL🧿🧿</option>
         <option value="-1003353395796" style="color: #ffffff;">39. GT-OP New OCEANS OF PROFIT TRIAL🧿🧿🧿</option>
+        <option value="-1003331877278" style="color: #ffffff;">40. GT-OP New 🧿OCEANS OF PROFIT 🧿TRIAL🧿</option>
+        
+        <option value="-1003412980486" style="color: #ffffff;">41. GT-OP New 🧿OCEANS OF PROFIT 🧿TRIAL</option>
+        <option value="-1003226178082" style="color: #ffffff;">42. GT-OP New OCEANS OF PROFIT 🧿TRIAL🧿🧿</option>
 
     </select>
       <button type="button" id="submitBtn">Submit</button>
